# drf_online_education

./: .env.sample  Dockerfile  docker-compose.yaml  payment.json  pyproject.toml
config/: settings.py  urls.py
materials/: models.py  permissions.py  serializers.py  services.py  srializers.py  tasks.py  urls.py  validators.py  views.py
materials/migrations/: 0001_initial.py  0002_lesson_course.py  0003_alter_lesson_course.py  0004_payments.py  0005_course_owner_lesson_owner.py  0006_subscription.py  0007_alter_subscription_user.py  0008_course_price_lesson_price.py
materials/tests_materials/: tests_for_moder.py  tests_for_su.py  tests_for_user.py  tests_subscription.py
users/: models.py  serializers.py  urls.py  views.py
users/management/commands/: cmemb.py  cmod.py  csu.py
users/migrations/: 0001_initial.py  0002_user_role.py
